--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,18 +5,18 @@
   gap: 4.0rem;
 }
 
-.catalog{
+.catalog {
   padding: 4.0rem;
   width: 100%;
   font-size: 2.2rem;
 }
 
 @media (max-width: 768px) {
-  .products_wrapper{
+  .products_wrapper {
     display: none;
   }
 
-  .catalog{
+  .catalog {
     padding: 3.2rem 1.6rem;
     font-size: 1.8rem;
   }
@@ -51,7 +51,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, rgb(168, 164, 153) 10%, rgba(0, 0, 0, 0.2) 80%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0.2) 80%);
 }
 
 .hero_content {
@@ -63,7 +63,7 @@
   display: flex;
   flex-direction: column;
   gap: 2.2rem;
-  
+
   width: 100vw;
   height: 100vh;
   justify-content: center;
@@ -79,32 +79,32 @@
   color: #FFFFFF;
 }
 
-.button{
+.button {
   display: flex;
   padding: 2.2rem 6.4rem;
   font-size: 2rem;
   width: fit-content;
-  color: #FFFFFF;
+  color: #000000;
   border: none;
   font-weight: 400;
-  background: #3C5F3B;
+  background: #FFFFFF;
 }
 
-.button:hover{
+.button:hover {
   text-decoration: none;
 }
 
 @media (max-width: 768px) {
-  .hero{
+  .hero {
     margin-top: 8.4rem;
   }
-  
-  .hero_content svg{
+
+  .hero_content svg {
     width: 70vw !important;
     height: auto;
   }
 
-  .hero_content{
+  .hero_content {
     padding-top: 12.0rem;
     padding-bottom: 12.0rem;
   }
@@ -117,9 +117,9 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    }
+  }
 
-    .text h1 {
+  .text h1 {
     font-size: 2.2rem;
     max-width: 100%;
     width: fit-content;
@@ -127,16 +127,16 @@
     text-align: center;
     font-weight: 400;
     color: #FFFFFF;
-    }
+  }
 
-    .button{
-      display: flex;
-      padding: 1.6rem 3.6rem;
-      font-size: 1.5rem;
-      text-wrap: nowrap;
-      width: fit-content;
-      color: #FFFFFF;
-      border: none;
-      background: #3C5F3B;
-    }
+  .button {
+    display: flex;
+    padding: 1.6rem 3.6rem;
+    font-size: 1.5rem;
+    text-wrap: nowrap;
+    width: fit-content;
+    color: #FFFFFF;
+    border: none;
+    background: #3C5F3B;
+  }
 }
