--- a/src/blocks/Arrivals/Arrivals.module.css
+++ b/src/blocks/Arrivals/Arrivals.module.css
@@ -21,6 +21,11 @@
     gap: 5.6rem;
 }
 
+.cardWrapper {
+    position: relative;
+    z-index: 10;
+}
+
 /* Область, в которой лежит стопка карточек */
 .sticky {
     position: sticky;
