--- a/src/blocks/SearchingForm/SearchingForm.module.css
+++ b/src/blocks/SearchingForm/SearchingForm.module.css
@@ -184,11 +184,16 @@
 @media (max-width: 768px) {
     .searchingForm {
         padding: 3.2rem 2.2rem;
+        margin-top: 6.4rem;
     }
 
     .title {
-        font-size: 2.4rem;
+        font-size: 2.2rem;
         margin-bottom: 3.2rem;
+    }
+
+    .title br {
+        display: none;
     }
 
     .fieldsGrid {
@@ -199,6 +204,15 @@
     .leftColumn,
     .rightColumn {
         gap: 1.2rem;
+    }
+
+    .carImage {
+        display: none;
+    }
+
+    .container {
+        width: 100%;
+        max-width: unset;
     }
 
     .select,
