--- a/src/components/CatalogFilters/CatalogFilters.module.css
+++ b/src/components/CatalogFilters/CatalogFilters.module.css
@@ -1,66 +1,104 @@
-.container {
+.selectGroup {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  position: sticky;
-  top: 2.0rem;
-  align-self: start;
-  width: 100%;
-  transition: 400ms;
+  width: 60%;
+  max-width: 200px;
 }
 
-.container.down {
-  top: 10.4rem;
+.select {
+  padding: 1.8rem 2.2rem;
+  border: 1px solid #E5E5E5;
+  border-radius: 4px;
+  font-size: 2rem;
+  background: #fff;
+  color: #333;
+  transition: border-color 0.2s ease;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='m6 8 4 4 4-4'/%3e%3c/svg%3e");
+  background-position: right 1.2rem center;
+  background-repeat: no-repeat;
+  background-size: 1.6rem;
+  padding-right: 4rem;
 }
 
-.paper {
-  width: 100%;
+.select:focus {
+  outline: none;
+  border-color: #333;
+}
+
+.select:disabled {
+  background: #f5f5f5;
+  color: #999;
+  cursor: not-allowed;
+}
+
+.oemInputWrapper {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  background: #F4F2E4;
-  overflow: hidden;
-  font-size: 1.6rem;
-}
-
-.button {
-  padding: 1.2rem 1.6rem;
-  color: #120C08;
-  user-select: none;
-  text-wrap: nowrap;
-}
-
-.button_folding {
-  padding: 1.2rem 1.6rem;
-  color: #120C08;
-  user-select: none;
-  text-wrap: nowrap;
+  align-items: center;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: nowrap;
+  max-width: 500px;
 }
 
-.arrow {
-  transform: rotate(270deg);
-  transition: transform .35s;
+.searchIcon {
+  position: absolute;
+  left: 2.2rem;
+  color: #999;
+  z-index: 1;
 }
 
-.arrow.visible {
-  transform: rotate(90deg);
+.oemInput {
+  width: 100%;
+  padding: 1.8rem 2.2rem 1.8rem 5rem;
+  border: 1px solid #E5E5E5;
+  border-radius: 0px;
+  font-size: 2rem;
+  background: #fff;
+  color: #333;
+  transition: border-color 0.2s ease;
+  box-sizing: border-box;
 }
 
-.selected {
-  background: #3C5F3B;
-  color: #FFFFFF;
+.oemInput:focus {
+  outline: none;
+  border-color: #333;
 }
 
-.button:hover {
-  cursor: pointer;
+.oemInput::placeholder {
+  color: #999;
 }
+
+.searchIcon {
+  position: absolute;
+  left: 2.2rem;
+  color: #999;
+  z-index: 1;
+}
+
 
 @media (max-width: 768px) {
-  .container {
-    position: static;
+  .select {
+    padding: 1rem 1.2rem;
+    font-size: 1.2rem;
+  }
+
+  .oemInput {
+    padding: 1rem 1.2rem 1rem 3rem;
+    font-size: 1.2rem;
+  }
+
+  .searchIcon {
+    left: 1rem;
+    width: 1.5rem;
+  }
+}
+
+
+@media (max-width: 745px) {
+
+  .selectGroup,
+  .oemInputWrapper {
+    width: 100%;
+    max-width: unset;
   }
 }
