--- a/src/components/StickyNavbar/StickyNavbar.module.css
+++ b/src/components/StickyNavbar/StickyNavbar.module.css
@@ -1,15 +1,20 @@
 .header {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
   position: fixed;
-  top: -20.0rem;
   left: 0;
   z-index: 999999;
   width: 100vw;
   /* padding: 2.5rem 1.0rem; */
   transition: 400ms;
   background: #FFFFFF;
+}
+
+.headerWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 
@@ -60,7 +65,8 @@
   width: 116px;
   height: 68px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  height: 100%;
   justify-content: center;
 }
 
