--- a/src/blocks/Order/Order.module.css
+++ b/src/blocks/Order/Order.module.css
@@ -1,82 +1,82 @@
+.blockWrapper {
+  width: 100%;
+  padding: 6.4rem 8.0rem;
+  display: flex;
+  flex-direction: column;
+  gap: 6.4rem;
+  padding-top: 220px;
+}
+
+.orderTitle {
+  font-size: 6.4rem;
+  font-weight: 300;
+}
+
 .order_wrapper {
   width: 100%;
   display: grid;
-  grid-template-columns: 2fr 1.5fr;
+  grid-template-columns: 2fr 1fr;
   gap: 6.4rem;
+}
+
+.orderInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 4.6rem;
+}
+
+.fieldsList {
+  width: 100%;
+  gap: 2.2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.fieldsBlockTitle {
+  font-size: 2.6rem;
+  text-transform: uppercase;
+}
+
+.fieldsRow {
+  width: 100%;
+  gap: 1.2rem;
+  display: flex;
+}
+
+.fieldsRowSelect {
+  margin-top: 2rem;
+  width: 100%;
+  gap: 1.2rem;
+  display: flex;
+}
+
+.selectItem {
+  width: 100%;
+  font-size: 1.8rem;
+  font-weight: 400;
+  padding: 1.6rem;
+  background: #FFFFFF;
+  -moz-appearance: textfield;
+  appearance: textfield;
+  border: none;
+  cursor: pointer;
+}
+
+.deliverySelected {
+  outline: 2px solid black;
+  font-weight: 600;
 }
 
 .cartItemsList {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
-  padding-bottom: 3.2rem;
-  border-bottom: 0.1rem solid rgba(0,0,0,0.4);
 }
 
-.detailsInfoList {
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-  padding: 3.2rem 0;
-  border-bottom: 0.1rem solid rgba(0,0,0,0.4);
-}
-
-.cityInput{
-  position: relative;
+.cartItemsDivider {
   width: 100%;
-}
-
-.search_results {
-	position: absolute;
-	z-index: 3;
-	top: 8.0rem;
-	left: 0;
-	border-radius: 1.4rem;
-	padding: 0.4rem;
-	background: #FFFFFF;
-	box-shadow: 0.0rem 0.0rem 0.3rem rgba(165, 177, 202, .3), 0.0rem 1.0rem 4.0rem rgba(165, 177, 202, .3);
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-  min-width: 30.0rem;
-	max-height: 22.0rem;
-	overflow-y: auto;
-}
-
-.search_result {
-	position: relative;
-	z-index: 4;
-	display: flex;
-	flex-direction: column;
-	padding: 0.8rem;
-	border-radius: 0.8rem;
-	cursor: pointer;
-	transition: 300ms;
-}
-
-.search_result:hover {
-  background: #f0efe7
-}
-
-.outside_click_handler {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 1;
-	width: 100vw;
-	height: 100vh;
-}
-
-.search_name {
-	font-size: 1.6rem;
-}
-
-.mobileDetailsInfoList {
-  display: none;
-  flex-direction: column;
-  gap: 1.6rem;
-  padding: 2.2rem 0;
-  border-bottom: 0.1rem solid rgba(0,0,0,0.4);
+  height: 1px;
+  background: #00000020;
 }
 
 .cartItem {
@@ -85,74 +85,116 @@
   align-items: center;
 }
 
-.itemInfo {
-  max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 0.4rem;
-}
-
-.itemName {
-  font-size: 2.0rem;
-  margin: 0 0 0.4rem;
-  font-weight: 500;
-}
-
-.itemPrice {
-  margin: 0;
-  font-size: 1.8rem;
-  color: #4b4b4b;
-  text-wrap: nowrap;
-}
-
-.itemPrice span{
-  color: #000000;
-}
-
-.imageInfo{
+.imageInfo {
   width: 100%;
   display: flex;
   align-items: center;
   gap: 2.2rem;
 }
 
-.imageWrapper{
+.imageWrapper {
   position: relative;
   width: 8.6rem;
   height: 8.6rem;
   overflow: hidden;
+  border-radius: 4px;
 }
 
-.detailsRow{
+.itemInfo {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  font-size: 2.2rem;
+}
+
+.itemPrice {
+  text-wrap: nowrap;
+}
+
+.totalPrice {
+  font-size: 2.6rem;
+}
+
+.totalPriceCents {
+  font-size: 2.2rem;
+}
+
+.submitButton {
+  background: #000000;
+  color: #FFFFFF;
+  border-radius: 0;
+  border: none;
+  cursor: pointer;
+  padding: 22px;
+  font-family: 'Averta CY', sans-serif;
+  font-size: 1.8rem;
+  transition: .2s all;
+}
+
+.submitButton:active {
+  transform: scale(0.97);
+}
+
+
+.contactItem {
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  height: 44px;
+  padding: 0 22px;
+}
+
+.contactItem:hover {
+  text-decoration: none;
+}
+
+.contactItem:first-child {
+  background: rgba(255, 255, 255, 1);
+  border: 1px solid #000000;
+  color: rgba(0, 0, 0, 1);
+}
+
+.contactItem:last-child {
+  background: rgba(0, 0, 0, 1);
+  color: rgba(255, 255, 255, 1);
+}
+
+.address {
+  font-family: 'Suisse Intl', sans-serif;
+  font-size: 16px;
+  font-weight: 450;
+  line-height: normal;
+  color: rgba(255, 255, 255, 1);
+}
+
+
+
+.detailsRow {
   display: flex;
   justify-content: space-between;
   font-size: 2.2rem;
 }
 
-.detailsRowValue{
+.detailsRowValue {
   font-weight: 500;
 }
 
-.blockWrapper{
-  width: 100%;
-  padding: 6.4rem 8.0rem;
-  display: flex;
-  flex-direction: column;
-  gap: 3.2rem;
-}
-
-.deliveryList{
+.deliveryList {
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
 }
 
-.deliveryType{
+.deliveryType {
   font-size: 1.6rem;
   padding-bottom: 1.2rem;
 }
 
-.delivery{
+.delivery {
   cursor: pointer;
   display: flex;
   width: fit-content;
@@ -166,36 +208,12 @@
   border-radius: 2.2rem;
 }
 
-.delivery.selected{
+.delivery.selected {
   border: 0.1rem solid #3C5F3B;
   opacity: 1;
 }
 
-.title{
-  font-size: 3.2rem;
-  font-weight: 300;
-}
-
-.fieldsRow{
-  width: 100%;
-  gap: 1.2rem;
-  display: flex;
-}
-
-.fieldsList{
-  width: 100%;
-  gap: 2.2rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.orderInfo{
-  display: flex;
-  flex-direction: column;
-  gap: 4.6rem;
-}
-
-.pay{
+.pay {
   padding: 2.2rem;
   background: #3C5F3B;
   align-items: center;
@@ -207,19 +225,25 @@
   cursor: pointer;
 }
 
+@media (max-width: 1200px) {
+  .blockWrapper {
+    padding-top: 60px;
+  }
+}
+
 @media (max-width: 768px) {
-  .blockWrapper{
+  .blockWrapper {
     margin-top: 8.4rem;
     padding: 2.4rem;
   }
 
-  .order_wrapper{
+  .order_wrapper {
     display: flex;
     flex-direction: column-reverse;
     gap: 2.2rem;
   }
 
-  .imageWrapper{
+  .imageWrapper {
     position: relative;
     width: 6.4rem;
     min-width: 6.4rem;
@@ -227,44 +251,44 @@
     overflow: hidden;
   }
 
-  .itemName{
+  .itemName {
     font-size: 1.8rem;
   }
-  
-  .itemPrice{
+
+  .itemPrice {
     font-size: 1.6rem;
   }
 
-  .itemInfo{
+  .itemInfo {
     gap: 0.0rem;
   }
 
-  .imageInfo{
+  .imageInfo {
     gap: 1.6rem;
   }
 
-  .title{
+  .title {
     font-size: 2.6rem;
     font-weight: 400;
   }
 
-  .cartItemsList{
+  .cartItemsList {
     padding-bottom: 2.2rem;
   }
 
-  .detailsInfoList{
+  .detailsInfoList {
     display: none;
   }
-  
-  .mobileDetailsInfoList{
+
+  .mobileDetailsInfoList {
     display: flex;
   }
 
-  .detailsRow{
+  .detailsRow {
     font-size: 1.8rem;
   }
 
-  .fieldsRow{
+  .fieldsRow {
     flex-direction: column;
   }
 }
