--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -35,7 +35,7 @@
     flex-direction: row;
     gap: 32px;
     font-size: 2.2rem;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
 .contactsInfo {
@@ -86,11 +86,11 @@
 .map {
     width: 100%;
     height: 300px;
-    background: lightgray;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 
