--- a/src/blocks/FreshStock/FreshStock.module.css
+++ b/src/blocks/FreshStock/FreshStock.module.css
@@ -34,7 +34,10 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: left;
-    line-height: 1;
+}
+
+.title span {
+    line-height: 1 !important;
 }
 
 
