--- a/src/blocks/CarModels/CarModels.module.css
+++ b/src/blocks/CarModels/CarModels.module.css
@@ -41,7 +41,10 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     text-align: left;
-    line-height: 1;
+}
+
+.title span {
+    line-height: 1 !important;
 }
 
 .titleIndent {
