--- a/src/blocks/AboutContent/AboutContent.module.css
+++ b/src/blocks/AboutContent/AboutContent.module.css
@@ -32,13 +32,14 @@
 }
 
 .imagePlaceholder {
+    position: relative;
     width: 100%;
     height: 48rem;
     background-color: var(--about-color-placeholder);
 }
 
 /* Tablet */
-@media (max-width: 102.4rem) {
+@media (max-width: 1024px) {
     .aboutContent {
         padding: 0 3.2rem;
         margin-top: 5rem;
@@ -60,7 +61,7 @@
 }
 
 /* Mobile */
-@media (max-width: 48rem) {
+@media (max-width: 480px) {
     .aboutContent {
         padding: 0 1.6rem;
         margin-top: 4rem;
